--- a/css/profile.css
+++ b/css/profile.css
@@ -1,6 +1,6 @@
 /* Profile Section */
 .profile {
-    margin-top: 20px;
+    margin-top: 50px;
     text-align: center;
     margin-bottom: auto;
     width: 100%;
@@ -15,6 +15,8 @@
     border-radius: 50%;
     object-fit: cover;
     border: 3px solid #1e90ff;
+    display: block;
+    margin: 0 auto;
 }
 
 /* Typing Animation */
